# lfs-stt

./: Cargo.toml  config.example.toml  readme.md
src/: insim_input.rs  insim_io.rs  main.rs  mod.rs  resampler.rs  stt.rs  ui.rs
src/audio/: audio_pipeline.rs  mod.rs  recorder.rs  resampler.rs  speech_to_text.rs
