[package]
name = "lfs_stt"
version = "0.1.2"
edition = "2024"

[dependencies]
whisper-rs = { version = "0.15.1", features = ["cuda"] }
whisper-rs-sys = { version = "0.14.1", features = ["force-debug"] }
cpal = "0.17.1"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"
hound = "3.5.1"
insim = { git = "https://github.com/theangryangel/insim.rs.git", branch = "main" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
once_cell = "1.21.3"
thiserror = "2.0.18"
anyhow = "1.0.101"
